--- a/templates/partners.html
+++ b/templates/partners.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link href= "../static/styles/mainstyle.css" rel="stylesheet" type="text/css" />
-</head>
+    <link href= "../static/styles/mainstyle2.css">
 
 <body>
 
