--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,10 @@
                 <a class="nav-link" href="./info.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="recommendations.html">Recommendations</a>
+                <a class="nav-link" href="./recommendations.html">Recommendations</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/filmshowings">Film Times</a>
               </li>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
