--- a/templates/partners.html
+++ b/templates/partners.html
@@ -9,6 +9,40 @@
 
 <body>
 
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid navbar">
+      <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="./home.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./signup.html">Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./login.html">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./info.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./recommendations.html">Recommendations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/filmshowings">Film Times</a>
+          </li>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <h1>Coming Soon - Our Partners</h1>
 
 <a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus venenatis odio quis sodales. Donec pulvinar vehicula hendrerit. Donec viverra diam quis augue laoreet, at pharetra velit sollicitudin. Nulla vel ligula lorem. Aliquam bibendum lobortis elementum. Nulla lobortis pellentesque turpis, in commodo metus posuere ut. Nullam varius turpis ex, vitae tempor nibh rhoncus quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultrices metus eu lacinia lacinia. Nam bibendum placerat est, vel tempus metus varius quis. Phasellus viverra accumsan commodo. Donec pharetra massa eget molestie viverra.
