--- a/templates/romance.html
+++ b/templates/romance.html
@@ -3,7 +3,42 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/mainstyle2.css') }}">
     
-    </head>
+    </head><body>
+        
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid navbar">
+          <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./home.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./signup.html">Sign Up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./login.html">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./info.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./recommendations.html">Recommendations</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/filmshowings">Film Times</a>
+              </li>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </ul>
+          </div>
+        </div>
+      </nav>
 <h1> <center> Here is your recommended <font color="Red"> Romance </font> Film </center></h1>
 <br>
 <br>
@@ -23,5 +58,5 @@
 <br>
 
 <a href="/"> Home </a>
-
+</body>
 </html>
