--- a/templates/showtimes.html
+++ b/templates/showtimes.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/mainstyle2.css') }}">
+    <link href= "../static/styles/mainstyle2.css" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="./home.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./signup.html">Sign Up</a>
@@ -32,7 +32,10 @@
               <a class="nav-link" href="./info.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="recommendations.html">Recommendations</a>
+              <a class="nav-link" href="./recommendations.html">Recommendations</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/filmshowings">Film Times</a>
             </li>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -44,7 +47,7 @@
     </nav>
 
     <div class="container-fluid bg-1 text-center">
-      <a href="index.html"><img src="static/pic_n_mix.png"  alt="logo" width="250"></a>
+      <a href="index.html"><img src="../static/images/pic_n_mix.png"  alt="logo" width="250"></a>
       <h1>Movie Showtimes</h1>
     </div>
 
@@ -68,8 +71,7 @@
     
       {% for time in time %}
       <tr>
-          <td> <a href="/filmshowings/{{time[1]}}"> {{time[1]}} </a></td>
-          <td> <a href="/filmshowings/{{time[0]}}"> {{time[0]}} </a></td>
+          <td> <a href="/filmshowings/{{time[1]}}"> {{time[1]}} {{time[0]}} </a></td>
       </tr>
       
   {% endfor %}
