--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,6 +12,7 @@
 
   <h1>Coming Soon</h1>
 
+  
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid navbar">
       <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
@@ -21,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link" aria-current="page" href="./home.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./signup.html">Sign Up</a>
@@ -33,7 +34,10 @@
             <a class="nav-link" href="./info.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="recommendations.html">Recommendations</a>
+            <a class="nav-link" href="./recommendations.html">Recommendations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/filmshowings">Film Times</a>
           </li>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
