--- a/templates/login.html
+++ b/templates/login.html
@@ -21,22 +21,22 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./home.html">Home</a>
+            <a class="nav-link" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./signup.html">Sign Up</a>
+            <a class="nav-link" href="/Signup">Sign Up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./login.html">Login</a>
+            <a class="nav-link" href="/Login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./info.html">About Us</a>
+            <a class="nav-link" href="/Aboutus">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./recommendations.html">Recommendations</a>
+            <a class="nav-link" href="/Recommendations">Recommendations</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/filmshowings">Film Times</a>
+            <a class="nav-link" href="/Filmshowings">Film Times</a>
           </li>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
